--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<body https://up.enterdesk.com/edpic/b4/a0/94/b4a094f53a01f2ce89c597e140064e54.jpg>
+<body background="https://up.enterdesk.com/edpic/b4/a0/94/b4a094f53a01f2ce89c597e140064e54.jpg">
 <p>亲爱的付同学</p>
 </body>
