--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
-<body background="https://up.enterdesk.com/edpic/b4/a0/94/b4a094f53a01f2ce89c597e140064e54.jpg">
-<p>亲爱的付同学</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>love</title>
+</head>  
+body {
+  background: url("https://up.enterdesk.com/edpic/b4/a0/94/b4a094f53a01f2ce89c597e140064e54.jpg") no-repeat;
+}
+
+<body>
+  <p>亲爱的付同学</p>
 </body>
+
+
+</html>
