--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <style type="text/css">
     body {
       background: url("https://up.enterdesk.com/edpic/b4/a0/94/b4a094f53a01f2ce89c597e140064e54.jpg") no-repeat;
+      background-position: center center;
+      background-attachment: fixed;
+      background-size: cover;
+      background-color: rgb(255 14 141);
     }
   </style>
 </head>  
