--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
   <title>love</title>
   <style type="text/css">
     body {
-      background: url("https://up.enterdesk.com/edpic/b4/a0/94/b4a094f53a01f2ce89c597e140064e54.jpg") no-repeat;
+      background: url("https://www.asqql.com/upfile/simg/2017-9/201792319145443076.jpg") no-repeat;
       background-position: center center;
       background-attachment: fixed;
       background-size: cover;
       background-color: rgb(255 14 141);
     }
+    .fu {
+      
+    }
   </style>
 </head>  
 
 <body>
-  <p>亲爱的付同学</p>
+  <p class="fu">致亲爱的付同学</p>
 </body>
 
 
